--- a/CrossRealmPriceCheck.csproj
+++ b/CrossRealmPriceCheck.csproj
@@ -83,15 +83,16 @@
     <Compile Include="CrossRealmCheck.Designer.cs">
       <DependentUpon>CrossRealmCheck.cs</DependentUpon>
     </Compile>
+    <Compile Include="Logger.cs" />
     <Compile Include="Managers\AuctionManager.cs" />
     <Compile Include="Managers\InformationManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpdateAvailable.cs">
+    <Compile Include="RealmList.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UpdateAvailable.Designer.cs">
-      <DependentUpon>UpdateAvailable.cs</DependentUpon>
+    <Compile Include="RealmList.Designer.cs">
+      <DependentUpon>RealmList.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Connect.resx">
       <DependentUpon>Connect.cs</DependentUpon>
@@ -108,8 +109,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="UpdateAvailable.resx">
-      <DependentUpon>UpdateAvailable.cs</DependentUpon>
+    <EmbeddedResource Include="RealmList.resx">
+      <DependentUpon>RealmList.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
