--- a/CrossRealmPriceCheck.csproj
+++ b/CrossRealmPriceCheck.csproj
@@ -83,6 +83,12 @@
     <Compile Include="CrossRealmCheck.Designer.cs">
       <DependentUpon>CrossRealmCheck.cs</DependentUpon>
     </Compile>
+    <Compile Include="ItemList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ItemList.Designer.cs">
+      <DependentUpon>ItemList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Logger.cs" />
     <Compile Include="Managers\AuctionManager.cs" />
     <Compile Include="Managers\InformationManager.cs" />
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CrossRealmCheck.resx">
       <DependentUpon>CrossRealmCheck.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ItemList.resx">
+      <DependentUpon>ItemList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
