--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="Autoupdater.NET.Official" version="1.4.11" targetFramework="net471" />
   <package id="Costura.Fody" version="3.1.0" targetFramework="net471" />
   <package id="Fody" version="3.1.3" targetFramework="net471" developmentDependency="true" />
+  <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net471" />
 </packages>
